# pytorch-bot

./: histogram_test.json
JLRobot/: Cargo.toml  config.robots.json  model-SimpleLogistic-trained.json  model-SimpleLogistic-trained.pt  trades.json  training.json
JLRobot/src/: main.rs
JLRobot/src/jhistogram/: dataview.rs  mod.rs
JLRobot/src/robots/: config.rs  data_collection.rs  log_kernel.rs  mod.rs  sparse_adam.rs
