[package]
name = "robot_manager"
version = "0.1.0"
authors = ["Maxim Samsonov <maxim.samsonov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.0"
#plotters = { path = "plotters" }
mix-distribution = "0.3.0"
rand = "0.7.3"
rand_distr = "0.2.2"
rand_xorshift = "0.2.0"
xz2 = "0.1.7"
zstd = "0.10"
serde_json = "1.0"
filters = "0.4.0"
debug-ignore = "1.0.2"
tch = "0.8.0"
anyhow="1.0.57"
chrono="0.4"
regex = "1"
itertools = "0.10.3"
strum = "0.24"
strum_macros = "0.24"